setup drizzle-orm, db, add book and post pages

--- a/package.json
+++ b/package.json
@@ -1,40 +1,50 @@
 {
-  "name": "lit-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@clerk/nextjs": "^4.23.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@trpc/client": "^10.37.1",
-    "@trpc/next": "^10.37.1",
-    "@trpc/react-query": "^10.37.1",
-    "@trpc/server": "^10.37.1",
-    "@types/node": "20.4.8",
-    "@types/react": "18.2.19",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.13",
-    "lucide-react": "^0.265.0",
-    "next": "13.4.13",
-    "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-query": "^3.39.3",
-    "superjson": "^1.13.1",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6",
-    "zod": "^3.21.4"
-  }
+	"name": "lit-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"generate": "drizzle-kit generate:pg --config=./drizzle.config.ts",
+		"introspect": "drizzle-kit introspect:pg --config=./drizzle.config.ts",
+		"migrate": "tsx -r dotenv/config migrate.ts"
+	},
+	"dependencies": {
+		"@clerk/nextjs": "^4.23.2",
+		"@neondatabase/serverless": "^0.5.7",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@trpc/client": "^10.37.1",
+		"@trpc/next": "^10.37.1",
+		"@trpc/react-query": "^10.37.1",
+		"@trpc/server": "^10.37.1",
+		"@types/node": "20.4.8",
+		"@types/react": "18.2.19",
+		"@types/react-dom": "18.2.7",
+		"autoprefixer": "10.4.14",
+		"axios": "^1.4.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.0.0",
+		"dotenv": "^16.3.1",
+		"drizzle-orm": "^0.28.2",
+		"eslint": "8.46.0",
+		"eslint-config-next": "13.4.13",
+		"lucide-react": "^0.265.0",
+		"next": "13.4.13",
+		"postcss": "8.4.27",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-query": "^3.39.3",
+		"superjson": "^1.13.1",
+		"tailwind-merge": "^1.14.0",
+		"tailwindcss": "3.3.3",
+		"tailwindcss-animate": "^1.0.6",
+		"typescript": "5.1.6",
+		"zod": "^3.21.4"
+	},
+	"devDependencies": {
+		"drizzle-kit": "^0.19.12",
+		"tsx": "^3.12.7"
+	}
 }
