--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 	"dependencies": {
 		"@clerk/nextjs": "^4.23.2",
 		"@neondatabase/serverless": "^0.5.7",
+		"@radix-ui/react-avatar": "^1.0.3",
+		"@radix-ui/react-navigation-menu": "^1.1.3",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@trpc/client": "^10.37.1",
 		"@trpc/next": "^10.37.1",
@@ -26,6 +28,7 @@
 		"axios": "^1.4.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
+		"dayjs": "^1.11.9",
 		"dotenv": "^16.3.1",
 		"drizzle-orm": "^0.28.2",
 		"eslint": "8.46.0",
