--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@clerk/nextjs": "^4.23.2",
 		"@neondatabase/serverless": "^0.5.7",
 		"@radix-ui/react-avatar": "^1.0.3",
+		"@radix-ui/react-dropdown-menu": "^2.0.5",
 		"@radix-ui/react-navigation-menu": "^1.1.3",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@trpc/client": "^10.37.1",
@@ -33,7 +34,7 @@
 		"drizzle-orm": "^0.28.2",
 		"eslint": "8.46.0",
 		"eslint-config-next": "13.4.13",
-		"lucide-react": "^0.265.0",
+		"lucide-react": "^0.263.1",
 		"next": "13.4.13",
 		"postcss": "8.4.27",
 		"react": "18.2.0",
