add openai book recommendations

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@types/node": "20.4.8",
 		"@types/react": "18.2.19",
 		"@types/react-dom": "18.2.7",
+		"@upstash/redis": "^1.22.1",
 		"autoprefixer": "10.4.14",
 		"axios": "^1.4.0",
 		"class-variance-authority": "^0.7.0",
@@ -36,6 +37,7 @@
 		"eslint-config-next": "13.4.13",
 		"lucide-react": "^0.263.1",
 		"next": "13.4.13",
+		"openai": "^4.11.0",
 		"postcss": "8.4.27",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
