--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@radix-ui/react-dropdown-menu": "^2.0.5",
 		"@radix-ui/react-navigation-menu": "^1.1.3",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.4",
 		"@trpc/client": "^10.37.1",
 		"@trpc/next": "^10.37.1",
 		"@trpc/react-query": "^10.37.1",
