--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hot-toast": "^2.4.1",
+		"react-intersection-observer": "^9.5.2",
 		"react-query": "^3.39.3",
 		"superjson": "^1.13.1",
 		"tailwind-merge": "^1.14.0",
